--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "express-session",
+  "name": "express-session-cn",
   "version": "1.15.6",
   "description": "Simple session middleware for Express",
-  "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
+  "author": "Jordan Gignac <jordangdevelop@gmail.com> (https://jordang.dev)",
   "contributors": [
     "Douglas Christopher Wilson <doug@somethingdoug.com>",
+    "Jordan Gignac <jordangdevelop@gmail.com>",
     "Joe Wagner <njwjs722@gmail.com>"
   ],
-  "repository": "expressjs/session",
+  "repository": "jordangignac/session-cn",
   "license": "MIT",
   "dependencies": {
     "cookie": "0.3.1",
